update thống kê món ăn

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyticsBLL.cs" />
+    <Compile Include="AnalyticsByFoodBLL.cs" />
     <Compile Include="AreaBLL.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="DepartmentBLL.cs" />
