--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -60,6 +60,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddProducts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddProducts.Designer.cs">
+      <DependentUpon>AddProducts.cs</DependentUpon>
+    </Compile>
     <Compile Include="Analytics.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuanLyKho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLyKho.Designer.cs">
+      <DependentUpon>QuanLyKho.cs</DependentUpon>
     </Compile>
     <Compile Include="StaffWorking\AddDiscountDialog.cs">
       <SubType>Form</SubType>
@@ -245,11 +257,17 @@
     </Compile>
     <Compile Include="Utilities\UtilsForm.cs" />
     <Compile Include="Utilities\UtilsImage.cs" />
+    <EmbeddedResource Include="AddProducts.resx">
+      <DependentUpon>AddProducts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Analytics.resx">
       <DependentUpon>Analytics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuanLyKho.resx">
+      <DependentUpon>QuanLyKho.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StaffWorking\AddDiscountDialog.resx">
       <DependentUpon>AddDiscountDialog.cs</DependentUpon>
@@ -400,6 +418,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Kho\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
