--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -63,6 +63,7 @@
     <Compile Include="MenuBLL.cs" />
     <Compile Include="MenuItemBLL.cs" />
     <Compile Include="OrderBLL.cs" />
+    <Compile Include="ProductBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableBLL.cs" />
     <Compile Include="UserBLL.cs" />
