--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyticsBLL.cs" />
+    <Compile Include="AnalyticsByFoodBLL.cs" />
     <Compile Include="AreaBLL.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="DepartmentBLL.cs" />
@@ -62,7 +63,6 @@
     <Compile Include="MenuBLL.cs" />
     <Compile Include="MenuItemBLL.cs" />
     <Compile Include="OrderBLL.cs" />
-    <Compile Include="ProductBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableBLL.cs" />
     <Compile Include="UserBLL.cs" />
